--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 *.js
-!jest.config.js
+!classic-infra/jest.config.js
 *.d.ts
 node_modules
 
 # CDK asset staging directory
 .cdk.staging
-cdk.out
+classic-infra/cdk.out
+
+*.pem
